--- a/Resources/views/Correction/correctComment.html.twig
+++ b/Resources/views/Correction/correctComment.html.twig
@@ -3,7 +3,7 @@
 {% form_theme form "IcapDropzoneBundle::form_theme_bootstrap3.html.twig" %}
 
 {% block dropzone_correct_content %}
-
+    {% set  commentInCorrectionRequired  = false %}
     <div class="container">
         <div class="row">
             <form id="correct-form" method="POST" action="{% if edit == false %}#{% elseif admin == true %}{{ path('icap_dropzone_drops_detail_correction_comment', {'resourceId': dropzone.id, 'state' : edit ? 'edit' : 'show', 'correctionId': correction.id}) }}{% else %}{{ path('icap_dropzone_correct_comment', {'resourceId': dropzone.id}) }}{% endif %}" class="form-horizontal">
@@ -18,14 +18,20 @@
                     {{ form_errors(form) }}
 
                     {% if edit == true %}
-                        <p>{{ 'Would you like to comment?'|trans({}, 'icap_dropzone') }}</p>
+                        {% if dropzone.forceCommentInCorrection %}
+                            {% set commentInCorrectionRequired = true %}
+                            <p>{{ 'Please comment'|trans({}, 'icap_dropzone') }}</p>
+                        {% else %}
+                            <p>{{ 'Would you like to comment?'|trans({}, 'icap_dropzone') }}</p>
+                        {% endif %}
                     {% else %}
                         <h3>{{ 'Comment'|trans({}, 'icap_dropzone') }}</h3>
                     {% endif %}
                     {% if edit %}
                         <div class="form-group">
-                    {{ form_row(form.comment, {'label_col_size': ' ', 'input_col_size': 'col-md-12', 'label_attr': {'style': 'display:none;'}, 'required':false}) }}
-                    </div>
+
+                            {{ form_row(form.comment, {'label_col_size': ' ', 'input_col_size': 'col-md-12', 'label_attr': {'style': 'display:none;'}, 'required':commentInCorrectionRequired}) }}
+                        </div>
                 {% else %}
                     <div class="well">
                         {{ correction.comment|raw }}
@@ -71,7 +77,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {% render controller('ClarolineCoreBundle:ResourceType:initPicker') %}
+    {#{% render controller('ClarolineCoreBundle:ResourceType:initPicker') %}#}
     {{ tinymce_init() }}
     <script>
         tinymce.claroline.configuration.toolbar1 = 'bold italic strikethrough | alignleft aligncenter alignright alignjustify | ';
