adding  translation, and server validation for mandatory comment in correction

--- a/Resources/views/Correction/correctComment.html.twig
+++ b/Resources/views/Correction/correctComment.html.twig
@@ -41,7 +41,7 @@
                         <div class="col-md-12">
                             <div class="required_text" style="display:none;">
                                 <p class="text-danger"><i class="fa fa-asterisk"></i>
-                                    &nbsp;{{ "Ce champ est requis."|trans({},'icap_dropzone') }}</p>
+                                    &nbsp;{{ "This field is required."|trans({},'icap_dropzone') }}</p>
                             </div>
                         </div>
                     {% else %}
