--- a/Resources/views/Correction/correct.html.twig
+++ b/Resources/views/Correction/correct.html.twig
@@ -22,11 +22,14 @@
 {% endblock %}
 
 {% block dropzone_content %}
+
     <div class="container container-dropzone">
+
         {% if admin %}
             <h2 class="{% if correction.reporter %}text-danger{% endif %}">
                 {{ 'Correction by %firstName% %lastName%'|trans({'%firstName%': correction.user.firstName, '%lastName%': correction.user.lastName}, 'icap_dropzone') }}
             </h2>
+            {{ macros.flashBox() }}
 
             <div class="row">
                 <div class="col-md-12">
@@ -124,6 +127,7 @@
                     {% endif %}
                 </div>
             </div>
+            {{ macros.flashBox() }}
             {# DROP STATUS BAR #}
             {% include 'IcapDropzoneBundle:Drop:dropStatus.html.twig' %}
 
