setting edition mode with the new structure

--- a/Resources/views/Dropzone/editCriteria.html.twig
+++ b/Resources/views/Dropzone/editCriteria.html.twig
@@ -134,6 +134,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="criterion-edit well" style="display: none;"></div>
                             </div>
                         </div>
                     </div>
@@ -221,27 +222,39 @@
                 <div class="template-criteria-zone" style="display: none;">
                     <div class="row">
                         <div class="col-md-9 new-criteria-form">
-                            {# form awaiting #}
+                            <!-- awaiting form -->
                         </div>
-
-                        <div class="col-md-3">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <span>{{ 'Not at all'|trans({}, 'icap_dropzone') }}</span>
-                                    <span class="pull-right">{{ 'Entirely'|trans({}, 'icap_dropzone') }}</span>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12 column-container-div">
-                                    <span class="column-container">
-                                        {% for i in 1..dropzone.totalCriteriaColumn %}
-                                            <input type="radio" disabled />
-                                        {% endfor %}
-                                    </span>
-                                </div>
-                            </div>
+                        <div class="col-md-3 criteria-radio-container ">
+                            <span class="column-container">
+                                {% for i in 1..dropzone.totalCriteriaColumn %}
+                                    <input type="radio" disabled/>
+                                {% endfor %}
+                            </span>
                         </div>
                     </div>
+                    {# <div class="row">
+                         <div class="col-md-9 new-criteria-form">
+                             &#123;&#35; form awaiting &#35;&#125;
+                         </div>
+
+                         <div class="col-md-3">
+                             <div class="row">
+                                 <div class="col-md-12">
+                                     <span>{{ 'Not at all'|trans({}, 'icap_dropzone') }}</span>
+                                     <span class="pull-right">{{ 'Entirely'|trans({}, 'icap_dropzone') }}</span>
+                                 </div>
+                             </div>
+                             <div class="row">
+                                 <div class="col-md-12 column-container-div">
+                                     <span class="column-container">
+                                         {% for i in 1..dropzone.totalCriteriaColumn %}
+                                             <input type="radio" disabled />
+                                         {% endfor %}
+                                     </span>
+                                 </div>
+                             </div>
+                         </div>
+                     </div>  #}
                     <div class="row">
                         <div class="col-md-12">
                             <div class="btn-group pull-right">
@@ -369,227 +382,13 @@
     {{ parent() }}
     <script src="{{ asset('bundles/icapdropzone/js/popup.js') }}"></script>
     {{ tinymce_init() }}
-
-
     <script>
-        var manualSubmit = false;
+        var totalColumn = {{ dropzone.totalCriteriaColumn }};
+        var comment =
+        {{ dropzone.allowCommentInCorrection ? 1 : 0 }}
         var nbCorrection = {{nbCorrection}};
-        $(document).ready(function () {
-            setSaveListener();
-            $('#icap_dropzone_criteria_form_goBack').val(0);
-            $('.back-button').on('click', function(event) {
-                event.preventDefault();
-                $('#icap_dropzone_criteria_form_goBack').val(1);
-                $('.save-submit').trigger('click');
-            });
-
-            $('.column-input').hide();
-            $('.column-input-js').show();
-
-            var totalColumn = {{ dropzone.totalCriteriaColumn }};
-            var comment = {{ dropzone.allowCommentInCorrection ? 1 : 0 }}
-
-            $('#icap_dropzone_criteria_form_allowCommentInCorrection').on('click', function () {
-                if (comment == 0) {
-                    comment = 1;
-                } else {
-                    comment = 0;
-                }
-                $('.comment-input input').val(comment);
-            });
-
-            var setColumnInput = function () {
-                $('.column-container').empty();
-                for (i = 0; i < totalColumn; i++) {
-                    $('.column-container').append('<input type="radio" disabled style="margin-right: 4px; margin-left: 0px; padding-right: 0px; padding-left: 0px"/>');
-                }
-            };
-
-            $('.add-column').on('click', function (event) {
-                event.preventDefault();
-                if (totalColumn < 10) {
-                    totalColumn++;
-                    setColumnInput();
-
-                    $('.column-input input').val(totalColumn);
-                }
-            });
-
-            $('.remove-column').on('click', function (event) {
-                event.preventDefault();
-                if (totalColumn > 3) {
-                    totalColumn--;
-                    setColumnInput();
-
-                    $('.column-input input').val(totalColumn);
-                }
-            });
-
-            function resetTiny(){
-                $('.tinymce').each(function(){
-                    $(this).tinymce().remove();
-                });
-            }
-
-            //var form_count = 0;
-            $('.add-criterion-button').on('click', function (event) {
-                event.preventDefault();
-
-                $('.disabled-during-edition').attr('disabled', 'disabled');
-                tinyMCE.get('icap_dropzone_criteria_form_correctionInstruction').getBody().setAttribute('contenteditable', false);
-                //$('.icap_dropzone_criteria_form_correctionInstruction').attr('disabled','disabled');
-                $('.criteria-form-button').attr('disabled', 'disabled');
-
-                var criterionId = $(this).data('criterion');
-                var $form = $('#global_form');
-                $('#addCriteriaReRouting').val('add-criterion');
-                $.ajax({
-                    url: $form.attr('action'),
-                    type: $form.attr('method'),
-                    data: $form.serialize(),
-                    success: function (data) {
-                        console.log(data);
-                        $.get($('.add-criterion-button').attr('href'))
-                                .done(function (data) {
-                                    resetTiny();
-                                    $('.new-criteria-zone').empty();
-                                    $('.criterion-row > .criterion-edit').empty();
-
-                                    $('.template > .template-criteria-zone').clone().appendTo('.new-criteria-zone');
-                                    $('.new-criteria-zone .new-criteria-form').append(data);
-
-                                    $('.column-input input').val(totalColumn);
-                                    $('.comment-input input').val(comment);
-
-                                    $('.add-criteria-zone').hide();
-                                    $('.new-criteria').show();
-                                    $('.new-criteria-zone > .template-criteria-zone').show();
-
-                                    $('.new-criteria-zone > .template-criteria-zone .form-buttons').hide();
-
-                                    $('.add-remove-column').show();
-                                    initTinyMCE(stfalcon_tinymce_config);
-
-                                    var top = $('#new-criteria').offset().top;
-                                    top = top - 50;
-                                    $('body,html').scrollTop(top);
-                                    setSaveListener();
-                                })
-                        ;
-
-                    }
-                });
-            });
-
-            $('.delete-criteria-button').click(function (event) {
-                event.preventDefault();
-                var $form = $('#global_form');
-                $('#addCriteriaReRouting').val('add-criterion');
-                var $link = $(this);
-                $.ajax({
-                    url: $form.attr('action'),
-                    type: $form.attr('method'),
-                    data: $form.serialize(),
-                    success: function () {
-                        $.get($link.attr('href'));
-                    }
-                })
-                ;
-            });
-
-            var temp_edit_criteria_url = null;
-            $('.edit-criterion-button').on('click', function (event) {
-                event.preventDefault();
-                temp_edit_criteria_url = $(this).attr('href');
-                $('.disabled-during-edition').attr('disabled', 'disabled');
-                $('.criteria-form-button').attr('disabled', 'disabled');
-
-                var criterionId = $(this).data('criterion');
-                var $form = $('#global_form');
-                $('#addCriteriaReRouting').val('add-criterion');
-
-                $.ajax({
-                    url: $form.attr('action'),
-                    type: $form.attr('method'),
-                    data: $form.serialize(),
-                    success: function () {
-                        $.get(temp_edit_criteria_url)
-                                .done(function (data) {
-                                    temp_edit_criteria_url = null;
-                                    resetTiny();
-                         $('.new-criteria-zone').empty();
-                         $('.criterion-row > .criterion-edit').empty();
-
-                         $('.template > .template-criteria-zone').clone().appendTo('#'+criterionId+' > .criterion-edit');
-                         $('#'+criterionId+' > .criterion-edit .new-criteria-form').append(data);
-
-                         $('#'+criterionId+' > .criterion-edit .form-cancel').data('criterion', criterionId);
-                         $('.column-input input').val(totalColumn);
-                         $('.comment-input input').val(comment);
-
-                         $('#'+criterionId+' > .criterion-show').hide();
-                         $('#'+criterionId+' > .criterion-edit').show();
-                         $('#'+criterionId+' > .criterion-edit > .template-criteria-zone').show();
-
-                         $('#'+criterionId+' > .criterion-edit > .template-criteria-zone .form-buttons').hide();
-
-                         initTinyMCE(stfalcon_tinymce_config);
-                         setSaveListener();
-                         })
-                         ;
-
-                    }
-                });
-
-
-            });
-
-            $('form').submit(function (e) {
-                if (nbCorrection > 0 && !manualSubmit) {
-                    e.preventDefault();
-                    $('#recalculateAskPopup').modal('show');
-                    manualSubmit = true;
-                    $('#recalculateButton').unbind('click').click(function () {
-                        $('#icap_dropzone_criteria_form_recalculateGrades').val(1);
-                        $('form').submit();
-                    });
-
-                    $('#notRecalculateButton').unbind('click').click(function () {
-                        $('form').submit();
-                    });
-                }
-            });
-
-
-        });
-
-        function setSaveListener()
-        {
-            $('.form-submit').unbind('click').click(function(event) {
-                event.preventDefault();
-                //I do the "click" on submit button for keep html5 warning
-                $('.inline-body button[type="submit"]').trigger('click');
-            });
-
-            $('.form-cancel').unbind('click').click(function (event) {
-                event.preventDefault();
-                var criterionId = $(this).data('criterion');
-                if (criterionId == 'new') {
-                    $('.new-criteria').hide();
-                    $('.add-criteria-zone').show();
-
-                    if ({{ (pager.nbResults == 0) ? 'true' : 'false' }}) {
-                        $('.add-remove-column').hide();
-                    }
-                } else {
-                    $('#'+criterionId+' > .criterion-edit').hide();
-                    $('#'+criterionId+' > .criterion-show').show();
-                }
-
-                $('.disabled-during-edition').attr('disabled', null);
-                $('.criteria-form-button').attr('disabled', null);
-                tinyMCE.get('icap_dropzone_criteria_form_correctionInstruction').getBody().setAttribute('contenteditable', true);
-            });
-        }
+        var nbResults = {{ pager.nbResults }};
     </script>
+    <script src="{{ asset('bundles/icapdropzone/js/Dropzone/editCriteria.js') }}"></script>
+
 {% endblock %}
