--- a/Resources/views/Drop/dropsByUser.html.twig
+++ b/Resources/views/Drop/dropsByUser.html.twig
@@ -1,7 +1,8 @@
 {% extends "IcapDropzoneBundle:Drop:dropsByBase.html.twig" %}
-{% block dropzone_content_drops_by_user %}
-        <a href="#" class="btn btn-default btn-xs active">{{ 'Sort by user'|trans({}, 'icap_dropzone') }}</a>
-{% endblock %}
+
+{% block  drops_completed_active %} active {% endblock %}
+{% block drops_completed_link %} # {% endblock %}
+{% block dropzone_content_drops_by_user_active %}active{% endblock %}
 
 {% block dropzone_content_drops_by_paginate_part %}
         {% if pager.haveToPaginate %}
