--- a/Resources/views/Drop/dropsAwaiting.html.twig
+++ b/Resources/views/Drop/dropsAwaiting.html.twig
@@ -1,31 +1,9 @@
 {% extends "IcapDropzoneBundle:Drop:drops.html.twig" %}
 
+{% block  drops_awaiting_active %} active {% endblock %}
+{% block drops_awaiting_link %} # {% endblock %}
+
 {% block dropzone_content_drops %}
-    <div class="navbar navbar-default" role="navigation">
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav">
-                <li>
-                    <a href="{{ path('icap_dropzone_drops_by_user', {'resourceId': dropzone.id}) }}">
-                        {{ 'Copies evaluation finished'|trans({}, 'icap_dropzone') }} <span
-                                class="badge">{{ nbDropCorrected }}</span>
-                    </a>
-                </li>
-                <li class="active">
-                    <a href="{{ path('icap_dropzone_drops_awaiting', {'resourceId': dropzone.id}) }}">
-                        {{ 'Copies being evaluated'|trans({}, 'icap_dropzone') }} <span
-                                class="badge">{{ nbDrop - nbDropCorrected }}</span>
-                    </a>
-                </li>
-                {% if dropzone.peerReview %}
-                    <li>
-                        <a href='{{ path('icap_dropzone_examiners', {'resourceId': dropzone.id}) }}'>
-                            {{ 'Examiners'|trans({}, 'icap_dropzone') }}
-                        </a>
-                    </li>
-                {% endif %}
-            </ul>
-        </div>
-    </div>
 
     {% include 'IcapDropzoneBundle:Drop:peerReviewHelper.html.twig' %}
 
