--- a/Resources/views/Drop/dropsByDefault.html.twig
+++ b/Resources/views/Drop/dropsByDefault.html.twig
@@ -1,6 +1,6 @@
 {% extends "IcapDropzoneBundle:Drop:dropsByBase.html.twig" %}
 
-{% block dropzone_content_drops_by_default %}
-    <a href="#" class="btn btn-default btn-xs active" data-toggle="tooltip" title=""
-       data-original-title="{{ 'Sorted by date with reported drops first'|trans({}, 'icap_dropzone') }}">{{ 'default sort'|trans({}, 'icap_dropzone') }}</a>
-{% endblock %}
+{% block  drops_completed_active %} active {% endblock %}
+{% block drops_completed_link %} # {% endblock %}
+
+{% block dropzone_content_drops_by_default_active %}active{% endblock %}
