--- a/Resources/views/Drop/dropsByReport.html.twig
+++ b/Resources/views/Drop/dropsByReport.html.twig
@@ -1,9 +1,9 @@
 {% extends "IcapDropzoneBundle:Drop:dropsByBase.html.twig" %}
 
-{% block dropzone_content_drops_by_reported %}
-    <a href="#" class="btn btn-default btn-xs active" data-toggle="tooltip" title=""
-       data-original-title="{{ 'only reported drops'|trans({}, 'icap_dropzone') }}">{{ 'sort by reported'|trans({}, 'icap_dropzone') }}</a>
-{% endblock %}
+{% block  drops_completed_active %} active {% endblock %}
+{% block drops_completed_link %} # {% endblock %}
+
+{% block dropzone_content_drops_by_reported_active %}active{% endblock %}
 
 {% block dropzone_content_drops_by_paginate_part %}
         {% if pager.haveToPaginate %}
